--- a/BinaryBundle/UnitTests/UnitTests.csproj
+++ b/BinaryBundle/UnitTests/UnitTests.csproj
@@ -16,7 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BinaryBundle\BinaryBundle.csproj" />
-    <ProjectReference Include="..\SourceGenerators\BinaryBundle.Generator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+    <ProjectReference Include="..\BinaryBundle.Generator\BinaryBundle.Generator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
 	<PropertyGroup>
