--- a/BinaryBundle/BinaryBundle.Generator/BinaryBundle.Generator.csproj
+++ b/BinaryBundle/BinaryBundle.Generator/BinaryBundle.Generator.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
@@ -18,4 +18,8 @@
 		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" PrivateAssets="all" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\BinaryBundle\BinaryBundle.csproj">
+		</ProjectReference>
+	</ItemGroup>
 </Project>
