--- a/BinaryBundle/BinaryBundle.nuspec
+++ b/BinaryBundle/BinaryBundle.nuspec
@@ -9,6 +9,7 @@
 		<summary>Source generator for binary serialization for structs and classes.</summary>
 		<repository type="git" url="https://github.com/AntonBergaker/BinaryBundle.git" />
 		<projectUrl>https://github.com/AntonBergaker/BinaryBundle</projectUrl>
+		<icon>images\Icon.png</icon>
 		<license type="expression">MIT</license>
 		<dependencies>
 			<group targetFramework="netstandard2.0" />
@@ -17,5 +18,6 @@
 	<files>
 		<file src="BinaryBundle\bin\Debug\netstandard2.0\BinaryBundle.dll" target="lib\netstandard2.0" />
 		<file src="BinaryBundle.Generator\bin\Debug\netstandard2.0\BinaryBundle.Generator.dll" target="analyzers\dotnet\cs" />
+		<file src="..\Icon.png" target="images\" />
 	</files>
 </package>
