--- a/BinaryBundle/BinaryBundle.nuspec
+++ b/BinaryBundle/BinaryBundle.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
 	<metadata>
 		<id>BinaryBundle</id>
-		<version>1.2.0</version>
+		<version>2.0.0</version>
 		<title>BinaryBundle</title>
 		<authors>AntonBergåker</authors>
 		<description>Source generator for binary serialization for structs and classes.</description>
@@ -11,6 +11,7 @@
 		<projectUrl>https://github.com/AntonBergaker/BinaryBundle</projectUrl>
 		<icon>images\Icon.png</icon>
 		<license type="expression">MIT</license>
+		<readme>docs\README.md</readme>
 		<dependencies>
 			<group targetFramework="netstandard2.0" />
 		</dependencies>
@@ -19,5 +20,6 @@
 		<file src="BinaryBundle\bin\Debug\netstandard2.0\BinaryBundle.dll" target="lib\netstandard2.0" />
 		<file src="BinaryBundle.Generator\bin\Debug\netstandard2.0\BinaryBundle.Generator.dll" target="analyzers\dotnet\cs" />
 		<file src="..\Icon.png" target="images\" />
+		<file src="..\README.md" target="docs\" />
 	</files>
 </package>
