--- a/BinaryBundle/BinaryBundle.nuspec
+++ b/BinaryBundle/BinaryBundle.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
 	<metadata>
 		<id>BinaryBundle</id>
-		<version>2.2.0</version>
+		<version>2.2.4</version>
 		<title>BinaryBundle</title>
 		<authors>AntonBergåker</authors>
 		<description>Source generator for binary serialization for structs and classes.</description>
@@ -14,11 +14,13 @@
 		<readme>docs\README.md</readme>
 		<dependencies>
 			<group targetFramework="netstandard2.0" />
+			<group targetFramework="net7.0" />
+			<group targetFramework="net8.0" />
 		</dependencies>
 	</metadata>
 	<files>
-		<file src="BinaryBundle\bin\Debug\netstandard2.0\BinaryBundle.dll" target="lib\netstandard2.0" />
-		<file src="BinaryBundle.Generator\bin\Debug\netstandard2.0\BinaryBundle.Generator.dll" target="analyzers\dotnet\cs" />
+		<file src="BinaryBundle\bin\Release\**.dll" target="lib/" />
+		<file src="BinaryBundle.Generator\bin\Release\netstandard2.0\BinaryBundle.Generator.dll" target="analyzers\dotnet\cs" />
 		<file src="..\Icon.png" target="images\" />
 		<file src="..\README.md" target="docs\" />
 	</files>
